some update img

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
     <div class="box-container">
         <div class="box tilt" data-sr-id="44" style="visibility: visible; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
-      <img draggable="false" src="./assets/images/projects/euphoria.jpg" alt="project">
+      <img draggable="false" src="./projects/euphoria.jpg" alt="project">
       <div class="content">
         <div class="tag">
         <h3>Euphoria AI-powered shop</h3>
@@ -342,14 +342,14 @@
         <div class="desc">
           <p>Euphoria is an AI-powered e-commerce platform with smart search, AI chatbot, secure payments, wishlist, cart and many more .</p>
           <div class="btns">
-            <a href="https://euphoria-cloth.vercel.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/ankushsingh8416/Euphoria" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
         <div class="box tilt" data-sr-id="45" style="visibility: visible; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
-      <img draggable="false" src="/assets/images/projects/store.jpg" alt="project">
+      <img draggable="false" src="projects/store.jpg" alt="project">
       <div class="content">
         <div class="tag">
         <h3>Google Drive Clone</h3>
@@ -357,14 +357,14 @@
         <div class="desc">
           <p>Google Drive clone using Next.js, implementing file storage, user authentication, user-friendly document management system.</p>
           <div class="btns">
-            <a href="https://my-google-drive-clone.vercel.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/ankushsingh8416/google-drive-clone" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
         <div class="box tilt" data-sr-id="46" style="visibility: visible; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -80, 0, 1); transition: 0.2s linear, opacity 1s cubic-bezier(0.5, 0, 0, 1), transform 1s cubic-bezier(0.5, 0, 0, 1);">
-      <img draggable="false" src="/assets/images/projects/resturant.jpg" alt="project">
+      <img draggable="false" src="projects/resturant.jpg" alt="project">
       <div class="content">
         <div class="tag">
         <h3>Resturant App</h3>
@@ -372,14 +372,14 @@
         <div class="desc">
           <p>Fully fledged Resturant CRUD app based on different design patterns. Built using React, jsx, Firebase, Firebase, Talwind.</p>
           <div class="btns">
-            <a href="https://returantapp-ab0f9.web.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/ankushsingh8416/Resurantapp" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
         <div class="box tilt" data-sr-id="47" style="visibility: visible; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -80, 0, 1); will-change: transform; transition: 0.2s linear, opacity 1s cubic-bezier(0.5, 0, 0, 1), transform 1s cubic-bezier(0.5, 0, 0, 1);">
-      <img draggable="false" src="/assets/images/projects/macdonalds.jpg" alt="project">
+      <img draggable="false" src="projects/contact1.png" alt="project">
       <div class="content">
         <div class="tag">
         <h3>mcdonald's</h3>
@@ -387,14 +387,14 @@
         <div class="desc">
           <p>This Is fully animated McDonald's website using React.js and GSAP ScrollTrigger.</p>
           <div class="btns">
-            <a href="https://mcdoanalds.netlify.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://mcdoanalds.netlify.app/" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
         <div class="box tilt" data-sr-id="48" style="visibility: visible; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
-      <img draggable="false" src="/assets/images/projects/markly.jpg" alt="project">
+      <img draggable="false" src="projects/eduspray.jpg" alt="project">
       <div class="content">
         <div class="tag">
         <h3>Ecommerce Bag Shop</h3>
@@ -402,14 +402,14 @@
         <div class="desc">
           <p>An innovative full-stack ecommerce bag shop featuring sleek designs, secure payment options, and a user-friendly interface for seamless shopping.</p>
           <div class="btns">
-            <a href="https://marklys.netlify.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/ankushsingh8416/markly-backend" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
         <div class="box tilt" data-sr-id="49" style="visibility: visible; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -80, 0, 1); transition: 0.2s linear, opacity 1s cubic-bezier(0.5, 0, 0, 1), transform 1s cubic-bezier(0.5, 0, 0, 1);">
-      <img draggable="false" src="/assets/images/projects/eduspray.jpg" alt="project">
+      <img draggable="false" src="projects/euphoria.jpg" alt="project">
       <div class="content">
         <div class="tag">
         <h3>Education Consultancy</h3>
@@ -417,14 +417,14 @@
         <div class="desc">
           <p>It's A Platform Designed To Revolutionize How We Engage With Knowledge. With A Fusion Of HTML, CSS, JavaScript, JQuery, Bootstrap, And GitHub.</p>
           <div class="btns">
-            <a href="https://eduspray.in/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/ankushsingh8416/eduspray" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
         <div class="box tilt" data-sr-id="50" style="visibility: visible; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
-      <img draggable="false" src="/assets/images/projects/hotel.jpg" alt="project">
+      <img draggable="false" src="/projects/hotel.jpg" alt="project">
       <div class="content">
         <div class="tag">
         <h3>Hotel Dubai</h3>
@@ -432,14 +432,14 @@
         <div class="desc">
           <p>Develop A Hotel Website With HTML , Css , Javascript , Bootstrap Integrate Dynamic Content, Implement Responsive Layouts, And Optimize For Performance And User Experience.</p>
           <div class="btns">
-            <a href="https://hotel-dubai.netlify.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/ankushsingh8416/All-projects/tree/main/Hotel" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
         <div class="box tilt" data-sr-id="51" style="visibility: visible; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
-      <img draggable="false" src="/assets/images/projects/social-media.jpg" alt="project">
+      <img draggable="false" src="projects/social-media.jpg" alt="project">
       <div class="content">
         <div class="tag">
         <h3>Social Media</h3>
@@ -447,14 +447,14 @@
         <div class="desc">
           <p>Full-Stack Social Media project which is collection of projects built on the React library..</p>
           <div class="btns">
-            <a href="https://social-media-fawn-six.vercel.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/ankushsingh8416/social-media" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
         <div class="box tilt" data-sr-id="52" style="visibility: visible; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -80, 0, 1); transition: 0.2s linear, opacity 1s cubic-bezier(0.5, 0, 0, 1), transform 1s cubic-bezier(0.5, 0, 0, 1);">
-      <img draggable="false" src="/assets/images/projects/todo.jpg" alt="project">
+      <img draggable="false" src="/projects/todo.jpg" alt="project">
       <div class="content">
         <div class="tag">
         <h3>React Todo List</h3>
@@ -462,27 +462,19 @@
         <div class="desc">
           <p>Build A Responsive Todo List App Using React. Features Include Adding, Deleting, And Marking Tasks As Complete. Implement Local Storage For Data Persistence And Deploy On Platforms Like Netlify.</p>
           <div class="btns">
-            <a href="https://an-todo.netlify.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/ankushsingh8416/todo-app" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
     </div>
-
-    <!-- <div class="viewall">
-      <a href="./projects/index.html" class="btn"><span>View All</span>
-        <i class="fas fa-arrow-right"></i>
-      </a>
-    </div> -->
-
   </section>
   <!-- work project section ends -->
 
   <!-- experience section starts -->
   <section class="experience" id="experience">
-
-    <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
+    <h2 class="heading"><i class="fas fa-briefcase"></i> </h2>
     <div class="timeline">
 
       <div class="container right">
